tests/NormalTests/paczka1/small_fuzzy/26106359.err
Error in line 1: 8FPBT A322 12,3
Error in line 4: r2TvSi A360 57,8
